front/src/pages/InvestingDetail.css
/* ... */
.buyNsell .buysection_wrap .convertedValue .eTH {
  position: absolute;
  right: 0;
  width: auto;
  height: 17px;
  flex-grow: 0;
  margin: 0 0 0 2px;
  font-family: Inter;
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.5px;
  text-align: right;
  color: var(--neutral-varient-qui-neu-vari-600);
}
.buyNsell .buysection_wrap .buyBtn {
  width: 373px;
  height: 54px;
  flex: none;
  order: 6;
  flex-grow: 0;
  padding: 16px 170px;
  box-sizing: border-box;
  border-radius: 38px;
  background-color: var(--primary-light-qui-green-300);
  cursor: pointer;
  color: #fff;
}
.buyNsell .buysection_wrap .buyBtn:active {
  background-color: var(--primary-light-qui-green-200);
  color: #fbfffb;
}
.buyNsell .buysection_wrap .buyBtn .buy_txt {
  width: 33px;
  height: 22px;
  flex-grow: 0;
  font-family: Inter;
  font-size: 18px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.22;
  letter-spacing: -0.5px;
  text-align: left;
  user-select: none;
}
.buyNsell .sellsection_wrap {
  width: 405px;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  box-sizing: border-box;
}
.buyNsell .sellsection_wrap .investablesaleAmount {
  position: relative;
  width: 373px;
  height: 52px;
  flex-grow: 0;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 89px;
  padding: 15px 0 18px;
  box-sizing: border-box;
  flex: none;
  order: 1;
  flex-grow: 0;
}
.buyNsell .sellsection_wrap .investablesaleAmount .isa_txt {
  position: absolute;
  left: 0;
  width: 165px;
  height: 19px;
  flex-grow: 0;
  font-family: Inter;
  font-size: 16px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: var(--neutral-qui-neu-800);
}
.buyNsell .sellsection_wrap .investablesaleAmount .isa_amount {
  position: absolute;
  right: 0;
  width: 119px;
  height: 19px;
  flex-grow: 0;
  font-family: Inter;
  font-size: 16px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: var(--neutral-qui-neu-800);
}
.buyNsell .sellsection_wrap .inputAmount {
  width: 373px;
  height: 56px;
  display: flex;
  flex: none;
  order: 2;
  flex-grow: 0;
  flex-direction: row;
  justify-content: flex-start;
  align-items: stretch;
  gap: 10px;
  padding: 0 0 0 16px;
  border-radius: 4px;
  border: solid 1px #e3e3e3;
  box-sizing: border-box;
  font-family: Inter;
  font-size: 16px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  text-align: left;
}
.buyNsell .sellsection_wrap .inputAmount::placeholder {
  width: auto;
  align-self: stretch;
  flex-grow: 0;
  font-family: Inter;
  font-size: 16px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  text-align: left;
  color: var(--neutral-varient-qui-neu-vari-600);
}
.buyNsell .sellsection_wrap .inputAmount:focus {
  outline-color: var(--neutral-qui-neu-400);
  outline-width: 0;
}
.buyNsell .sellsection_wrap .amount_select_btn {
  width: 373px;
  height: 31px;
  flex-grow: 0;
  display: flex;
  flex: none;
  order: 3;
  flex-grow: 0;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 34px;
  padding: 8px 33.8px;
  border-radius: 4px;
  border: solid 1px #e3e3e3;
  box-sizing: border-box;
  margin-top: 5px;
}
.buyNsell .sellsection_wrap .amount_select_btn > span {
  width: 45px;
  height: 15px;
  flex-grow: 0;
  font-family: Inter;
  font-size: 12px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: #242424;
  user-select: none;
  cursor: pointer;
}
.buyNsell .sellsection_wrap .amount_select_btn > span:hover {
  font-weight: 500;
  color: var(--primary-light-qui-green-400);
}
.buyNsell .sellsection_wrap .amount_select_btn .spaceLine {
  width: 1px;
  height: 12px;
  flex-grow: 0;
  background-color: var(--neutral-qui-neu-100);
}
.buyNsell .sellsection_wrap .convertedValue {
  position: relative;
  width: 373px;
  height: 84.3px;
  display: flex;
  flex: none;
  order: 4;
  flex-grow: 0;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 206px;
  padding: 7px 0 60.3px;
  box-sizing: border-box;
}
.buyNsell .sellsection_wrap .convertedValue .cv_txt {
  position: absolute;
  left: 0;
  width: 107px;
  height: 17px;
  flex-grow: 0;
  font-family: Inter;
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: var(--neutral-varient-qui-neu-vari-600);
}
.buyNsell .sellsection_wrap .convertedValue .cv_amount {
  position: absolute;
  right: 29px;
  width: auto;
  height: 17px;
  flex-grow: 0;
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: right;
  color: #353535;
}
.buyNsell .sellsection_wrap .convertedValue .eTH {
  position: absolute;
  right: 0;
  width: auto;
  height: 17px;
  flex-grow: 0;
  margin: 0 0 0 2px;
  font-family: Inter;
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.5px;
  text-align: right;
  color: var(--neutral-varient-qui-neu-vari-600);
}
.buyNsell .sellsection_wrap .sellBtn {
  width: 373px;
  height: 54px;
  flex: none;
  order: 5;
  flex-grow: 0;
  padding: 16px 170px;
  box-sizing: border-box;
  border-radius: 38px;
  background-color: var(--secondary-light-qui-blue-300);

  cursor: pointer;
  color: #fff;
}
.buyNsell .sellsection_wrap .sellBtn:active {
  background-color: var(--secondary-light-qui-blue-200);
  color: #fbfffb;
}
/* ... */

